--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" type="text/css" href="/tutorials/style.css" />
+        <meta charset="UTF-8" />
         <meta property="og:title" content="Minionsart Tutorials" />
         <meta property="og:type" content="image/png" />
         <meta property="og:url" content="https://https://minionsart.github.io/tutorials/" />
         <meta property="og:image" content="/tutorials/Images/kat.jpg" />
-        <link rel="stylesheet" type="text/css" href="/tutorials/style.css" />
-        <link href="https://fonts.cdnfonts.com/css/berlin-sans-fb-demi" rel="stylesheet" />
         <link rel="shortcut icon" href="/tutorials/Images/favicon.ico" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+        <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="/tutorials/TutData.json"></script>
         <script type="text/javascript" src="/tutorials/Builder.js"></script>
-        <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-        <meta charset="UTF-8" />
+         <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+        <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
         <script>
             $("#body").ready(function () {
                 CheckData();
