--- a/header.html
+++ b/header.html
@@ -4,7 +4,8 @@
             <img src="Images/minionsart.png" width="300px" style="padding-top: 20px" />
 
             <div class="header2">Tutorials</div>
-
+        </div>
+        <div class="header-holder">
             <a href="https://twitter.com/minionsart"><twitter></twitter></a>
 
             <a href="https://bsky.app/profile/minionsart.bsky.social"><bluesky></bluesky></a>
@@ -16,6 +17,16 @@
             <a href="https://www.patreon.com/minionsart"><PatreonBig></PatreonBig></a>
 
             <span style="padding: 40px; font-size: large"><a href="/tutorials/grasssystem.html">Grass System</a></span>
+            <div>
+                <a href="https://ko-fi.com/H2H8695X" target="_blank"
+                    ><img
+                        height="36"
+                        style="border: 0px; height: 36px"
+                        src="https://storage.ko-fi.com/cdn/kofi4.png?v=6"
+                        border="0"
+                        alt="Buy Me a Coffee at ko-fi.com"
+                /></a>
+            </div>
         </div>
     </div>
 
